# printpilot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: main.rs  string.rs  transfer.rs
site/: Cargo.toml  build.rs
site/core/: Cargo.toml
site/core/src/: transfer.rs
site/src/: html.rs  main.rs
site/src/static/: defer.js  index.html  nodefer.js  script.js  style.css
src/: body.rs  main.rs  tracing.rs
src/static/: defer.js  index.html  nodefer.js  style.css
static/: anothername.js  pdf.js  style.css
