[package]
name = "site"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4.39"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3.1"
futures = "0.3.31"
indoc = "2.0.5"
reqwest = "0.12.12"
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
